--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -11,6 +11,7 @@
     "common_or": "or",
     "common_sending": "sending...",
     "common_save_changes": "Save changes...",
+    "common_view_all": "View All",
     
 
     "validators_required": "Field is required",
