feat: Implement Categories State Management with Cubit
- Added CategoriesState class to manage the state of categories in the application.
- Created CategoriesAppBar widget for displaying category information and search functionality.
- Introduced CategoriesAppBarSettingsButton for filter and sort options.
- Developed categories_products_filter.dart for managing filter options with a bottom sheet interface.
- Implemented HomeCategoriesCubit to handle fetching categories and managing loading states.
- Created HomeCategoriesState class to represent different states of category loading and error handling.

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -12,6 +12,7 @@
     "common_sending": "جاري الإرسال...",
     "common_save_changes": "حفظ التغييرات....",
     "common_view_all": "عرض الكل",
+    "common_result_for": "نتائج البحث عن",
     
 
     "validators_required": "هذا الحقل مطلوب",
@@ -100,5 +101,7 @@
     "edit_profile_gender_male": "ذكر",
     "edit_profile_gender_female": "انثى",
     "edit_profile_profile_updated_successfully": "تم تحديث الملف الشخصي بنجاح"
+
+
 
 }
