--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -3,6 +3,7 @@
     "common_skip": "Skip",
     "common_save": "Save",
     "common_delete": "Delete",
+    "common_edit": "Edit",
     "common_send": "Send",
     "common_cancel": "Cancel",
     "common_resend": "Resend",
@@ -15,6 +16,10 @@
     "common_result_for" : "Result for",
     "common_loading": "Loading...",
     "common_search_for": "Search for {}",
+    "common_something_went_wrong": "Something went wrong",
+    "common_default" : "Default",
+
+
 
 
     "network_no_internet": "No internet connection",
@@ -62,7 +67,7 @@
     "auth_or_sign_in_with": "Or sign in with",
     "auth_send_password_reset_link": "Send Password Reset Link",
     "auth_we_sent_you_an_email_to_verify_your_account" : "We sent you an email to verify your account",
-    "auth_we_sent_you_an_email_to_reset_your_password": "أرسلنا لك بريدًا إلكترونيًا لإعادة تعيين كلمة المرور",
+    "auth_we_sent_you_an_email_to_reset_your_password": "We sent you an email to reset your password",
     "auth_signing_in": "Signing in...",
     "auth_signing_out": "Signing out...",
     "auth_creating_account": "Creating account...",
@@ -170,7 +175,44 @@
       "other": "{} results found"
     },
 
-    
+    "address_default_address": "Default Address",
+    "address_sign_in_required": "Sign In Required",
+    "address_sign_in_required_desc": "Please sign in to access your addresses and continue.",
+    "address_no_addresses": "No Addresses Found",
+    "address_no_addresses_desc": "Add a delivery address to place your order and receive your products.",
+    "address_delete_address": "Delete Address",
+    "address_delete_address_desc": "Are you sure you want to remove this address?",
+    "address_name": "Full Name",
+    "address_address": "Address",
+    "address_phone": "Phone Number",
+    "address_add_new_address": "Add New Address",
+    "address_items_in_addresses": {
+      "zero": "No addresses",
+      "one": "1 address",
+      "other": "{} addresses"
+    },
+    "address_locate_on_map" : "Locate on Map",
+    "address_locate_me" : "Locate Me",
+    "address_confirm_location" : "Confirm Location",
+    "address_save_address" : "Save Address",
+    "address_edit_address" : "Edit Address",
+    "address_update_address" : "Update Address",
+    "address_saving_address" : "Saving Address...",
+    "address_updating_address" : "Updating Address...",
+    "address_type": "Address Type",
+    "address_type_home": "Home",
+    "address_type_work": "Work",
+    "address_type_other": "Other",
+    "address_this_address_will_be_auto" : "This address will be automatically set as your default since it's your only address.",
+    "address_set_as_default" : "Set as Default",
+    "address_set_as_default_desc" : "Are you sure you want to set this address as default?",
+    "address_already_default" : "Already Default",
+    "address_set_as_default_address" : "Set as Default Address",
+    "address_cannot_update_default_while_editing" : "You can't change the default status of an address while editing it.",
+    "address_theres_nothing_to_update": "There's nothing to update — no changes detected.",
+
+
+
     "cart_add_to_cart": "Add to cart",
     "cart_remove_from_cart": "Remove from cart",
     "cart_items_in_cart": {
@@ -179,6 +221,7 @@
       "other": "{} items in cart"
     },
     "cart_qty": "QTY: {}"
+
 
 
     
