feat: Add localization for "You have" message in Arabic and English

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -18,7 +18,7 @@
     "common_edit": "تعديل",
     "common_something_went_wrong": "حدث خطأ ما",
     "common_default": "افتراضي",
-
+    "common_you_have" : "لديك",
     
 
     "network_no_internet": "لا يوجد اتصال بالإنترنت",
