--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -18,6 +18,7 @@
     "common_search_for": "Search for {}",
     "common_something_went_wrong": "Something went wrong",
     "common_default" : "Default",
+    "common_you_have" : "You have",
 
 
 
