Refactor cart feature to enhance order summary and coupon functionality
- Updated CartItemDetails to use productItemEntity for brand, title, deliveryDays, and price.
- Modified CartItemImage to reference productItemEntity for imageUrl.
- Adjusted CartItemPrice to display price and discount from productItemEntity.
- Refactored CartList to utilize Skeletonizer for loading state and improved item count handling.
- Enhanced CartListItem layout to include quantity, favorite, and remove buttons.
- Updated FavoriteRemoteDataSource to use productId instead of id.
- Changed FavoriteRepoImpl to fetch and convert favorites to ProductItemEntity.
- Improved FavoriteCubit to manage favorite IDs and toggle favorites based on productId.
- Adjusted SearchRepoImpl and SearchCubit to use productId for recent searches.
- Added new localization keys for cart checkout, order summary, and coupon functionalities.
- Implemented CartOrderSummary entity to encapsulate order details.
- Created CartBottomBar and CartCouponCode widgets for improved cart UI.
- Developed CartViewBody to handle responsive layouts for cart display.
- Added CartCouponCodeDesc to provide delivery fee information.
- Implemented CartItemFavoriteButton, CartItemQuantityButton, and CartItemRemoveButton for item actions.

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -233,6 +233,20 @@
     "cart_already_in_cart": "بالفعل في سلة التسوق",
     "cart_empty_title": "سلة التسوق فارغة.",
     "cart_empty_desc": "ماذا تنتظر؟ ابدأ التسوق الآن!",
+    "cart_checkout": "إتمام الشراء",
+    "cart_order_summary": "ملخص الطلب",
+    "cart_total": "الإجمالي",
+    "cart_subtotal": "المجموع قبل الخصم",
+    "cart_delivery_fee": "رسوم التوصيل",
+    "cart_coupon_discount": "خصم الكوبون",
+    "cart_apply_coupon": "تطبيق",
+    "cart_remove_coupon": "إزالة",
+    "cart_coupon_code": "رمز الكوبون",
+    "cart_coupon_removed": "تمت إزالة الكوبون",
+    "cart_coupon_applied": "تم تطبيق الكوبون بنجاح! 🎉",
+    "cart_delivery_fee_desc": "توصيل مجاني للطلبات التي تتجاوز ٢٠٠ جنيه",
+    "cart_invalid_coupon": "رمز الكوبون غير صالح، يجب أن يكون مكونًا من 4 أحرف",
+
 
     "delivery_arrives_by": "تصل بحلول"
 
