feat: Implement checkout feature with UI and localization
- Added checkout view and its components including address selection, delivery instructions, payment methods, and order summary.
- Integrated localization for checkout-related strings in Arabic and English.
- Updated routing to include checkout route.
- Enhanced cart functionality to navigate to checkout from the cart bottom bar.
- Created responsive layouts for mobile and tablet views in the checkout process.
- Added payment method options including Cash on Delivery, Stripe, Paymob, and PayPal.
- Implemented delivery instructions selection with visual feedback.
- Added order summary display with total price and item count.
- Created a new orders view for future implementation.

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -248,7 +248,17 @@
     "cart_invalid_coupon": "رمز الكوبون غير صالح، يجب أن يكون مكونًا من 4 أحرف",
 
 
-    "delivery_arrives_by": "تصل بحلول"
+    "delivery_arrives_by": "تصل بحلول",
+
+    
+    "checkout_title": "إتمام الشراء",
+    "checkout_payment_method": "طريقة الدفع",
+    "checkout_shipment": "الشحن",
+    "checkout_place_order": "تأكيد الطلب",
+    "checkout_delivery_instructions": "تعليمات التوصيل",
+    "checkout_leave_at_door": "اتركها عند الباب",
+    "checkout_hand_it_to_me": "سلمني إياها مباشرة",
+    "call_on_arrival": "اتصل عند الوصول"
 
   }   
     
