feat: Implement checkout functionality with payment integration
- Added CheckoutCubit to manage checkout state including address, payment method, and delivery instructions.
- Introduced DeliveryInstructionsEnum and PaymentMethodEnum for better handling of delivery options and payment methods.
- Updated CheckoutPlaceOrderButton to enable/disable button based on order placement conditions.
- Integrated Stripe payment service for processing payments.
- Created OrdersModel and OrdersEntity to represent order data structure.
- Added localization keys for new checkout features.
- Implemented ProGuard rules for Stripe integration in Android.
- Updated pubspec.yaml to include flutter_stripe dependency.

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -258,7 +258,8 @@
     "checkout_delivery_instructions": "تعليمات التوصيل",
     "checkout_leave_at_door": "اتركها عند الباب",
     "checkout_hand_it_to_me": "سلمني إياها مباشرة",
-    "call_on_arrival": "اتصل عند الوصول"
+    "checkout_call_on_arrival": "اتصل عند الوصول",
+    "checkout_cash_on_delivery" : "الدفع عند التوصيل"
 
   }   
     
