--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -20,7 +20,14 @@
     "common_default" : "Default",
     "common_you_have" : "You have",
     "common_tomorrow": "Tomorrow",
-
+    "common_try_again": "Try Again",
+    "common_items_count": {
+      "zero": "No items",
+      "one": "1 item",
+      "other": "{} items"
+    },
+    "common_created_at": "Created At",
+    "common_try_searching_for_something_else": "Try searching for something else",
 
 
     "network_no_internet": "No internet connection",
@@ -86,15 +93,15 @@
     "auth_didnt_receive_the_email": "Didn't receive the email?",
 
 
-    "bottom_navigation_home": "Home",
     "bottom_navigation_categories": "Categories",
-    "bottom_navigation_cart": "Cart",
-    "bottom_navigation_profile": "Profile",
 
 
+    "home_title": "Home",
     "home_popular_products": "Popular Products",
+    "home_recently_viewed_products": "Recently Viewed Products",
 
 
+    "profile_title": "Profile",
     "profile_my_preference": "My Preferences",
     "profile_my_cart": "My Cart",
     "profile_my_orders": "My Orders",
@@ -218,17 +225,14 @@
     "address_add_delivery_location" : "Add delivery location",
 
 
+    "cart_title": "Cart",
     "cart_add_to_cart": "Add to cart",
     "cart_remove_from_cart": "Remove from cart",
-    "cart_items_in_cart": {
-      "zero": "No items",
-      "one": "1 item",
-      "other": "{} items"
-    },
     "cart_qty": "QTY: {}",
     "cart_already_in_cart": "Already in cart",
     "cart_empty_title" : "Your cart is empty.",
     "cart_empty_desc" : "What are you waiting for? Start shopping now!",
+    "cart_shop_now" : "Shop Now",
     "cart_checkout" : "Checkout",
     "cart_order_summary" : "Order Summary",
     "cart_total": "Total",
@@ -255,6 +259,30 @@
     "checkout_leave_at_door" : "Leave at door",
     "checkout_hand_it_to_me" : "Hand it to me",
     "checkout_call_on_arrival" : "Call on arrival",
-    "checkout_cash_on_delivery" : "Cash on Delivery"
+    "checkout_cash_on_delivery" : "Cash on Delivery",
+    "checkout_thank_you_for_ordering" : "Thank you for ordering",
+    "checkout_order_placed_successfully" : "Your order has been placed successfully",
+    "checkout_view_order" : "View Order",
+    "checkout_continue_shopping" : "Continue Shopping",
+  
+  
+    "orders_title": "Orders",
+    "orders_empty": "No Orders Found",
+    "orders_no_orders_desc": "You don't have any orders yet.",
+    "orders_show_details" : "Show Details",
+    "orders_delivery_address": "Delivery Address",
+    "order_id": "Order ID",
+    "order_copy_id": "Copy Order ID",
+    "order_id_copied": "Order ID Copied!",
+    "order_status_placed": "Order Placed",
+    "order_status_delivered": "Delivered",
+    "order_status_cancelled": "Cancelled",
+    "order_status_confirmed": "Confirmed",
+    "order_status_pending": "Pending",
+    "order_status_shipped": "Shipped",
+    "order_has_been_cancelled": "This order has been cancelled.",
+    "order_delivery_tracking": "Delivery Tracking",
+    "order_details": "Order Details",
+    "orders_try_searching_for_something_else" : "Try searching for something else"
 
-}
+  }
